[package]
name = "monkey"
version = "0.1.0"
authors = ["onContentStop <mariorules24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.5"
maplit = "1.0.2"
matches = "0.1.8"
once_cell = "1.7.2"
strum = "0.20.0"
strum_macros = "0.20.1"

[dev-dependencies]
rstest = "0.7.0"
